--- a/app/src/main/res/layout-v17/favorite_card_layout.xml
+++ b/app/src/main/res/layout-v17/favorite_card_layout.xml
@@ -44,7 +44,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="My Name"
+                        android:text="David"
                         android:textColor="@color/black" />
 
                     <TextView
@@ -53,7 +53,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:paddingStart="5dp"
-                        android:text="45" />
+                        android:text="29" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -76,9 +76,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:maxLines="1"
                         android:paddingStart="5dp"
-                        android:text="Bride's X"
-                        android:maxLines="1"/>
+                        android:text="Suzanne's family" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -96,9 +96,9 @@
                         android:id="@+id/eventName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:maxLines="1"
                         android:paddingStart="5dp"
-                        android:text="friend wedding"
-                        android:maxLines="1"/>
+                        android:text="Suzanne and Michael's wedding" />
 
                 </LinearLayout>
             </LinearLayout>
