--- a/app/src/main/res/layout-v17/person_card_layout.xml
+++ b/app/src/main/res/layout-v17/person_card_layout.xml
@@ -40,22 +40,22 @@
 
                     android:paddingStart="30dp"
                     >
+
                     <TextView
                         android:id="@+id/myName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="My Name"
                         android:layout_gravity="center"
-                        android:textColor="@color/black"
-                        />
+                        android:text="Lily"
+                        android:textColor="@color/black" />
+
                     <TextView
                         android:id="@+id/myAge"
-                        android:paddingStart="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="45"
                         android:layout_gravity="center"
-                        />
+                        android:paddingStart="5dp"
+                        android:text="37" />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -70,13 +70,14 @@
 
                         android:layout_gravity="center"
                         />
+
                     <TextView
                         android:id="@+id/kashur"
-                        android:paddingStart="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Brides friend"
                         android:layout_gravity="center"
+                        android:paddingStart="5dp"
+                        android:text="Suzanne's freind"
 
                         />
                 </LinearLayout>
@@ -85,7 +86,7 @@
                 android:id="@+id/addToFavorite"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_favorite_checked"
+                android:src="@drawable/ic_favorite_unchecked"
                 android:layout_gravity="center"
                 android:layout_marginEnd="10dp"
                 android:autoMirrored="true"
