--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.user.check_mate.controller.MainActivity"
+    tools:context="com.hionthefly.user.check_mate.controller.MainActivity"
     android:orientation="vertical">
     <FrameLayout
         android:id="@+id/turnOnGpsLayout"
