--- a/app/src/main/res/layout/activity_my_event.xml
+++ b/app/src/main/res/layout/activity_my_event.xml
@@ -5,7 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.user.check_mate.controller.MyEventActivity">
+    tools:context="com.hionthefly.user.check_mate.controller.MyEventActivity">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
