--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.user.check_mate.controller.SplashActivity">
+    tools:context="com.hionthefly.user.check_mate.controller.SplashActivity">
 
 </android.support.constraint.ConstraintLayout>
